# family-budget-api

./: .env.example  .env.template  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
apps/api/: urls.py
apps/api/v1/: urls.py
apps/budgets/: admin.py  models.py
apps/budgets/api_v1/: permissions.py  serializers.py  urls.py  views.py
apps/budgets/api_v1/tests/: test_permissions.py  test_views.py
apps/budgets/migrations/: 0001_initial.py  0002_auto_20220403_0817.py  0003_auto_20220403_0820.py  0004_alter_expense_amount.py
apps/budgets/tests/: test_models.py
conf/caddy/: Caddyfile_local
config/: urls.py
config/settings/: base.py  dev.py  prod.py  test.py
core/: utils.py
core/tests/: test_utils.py
fixtures/: fixtures.json
scripts/: django_entrypoint.sh
tests/: conftest.py  test_functional.py  test_urls.py
tests/fixtures/: budgets.py  drf.py  users.py
