[tool.poetry]
name = "family-budget-backend"
version = "0.1.0"
description = "REST API backend for Tivix family budget test app"
authors = ["Dastan Abd <dastand.climber@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
psycopg2-binary = "^2.9.1"
django-stubs = "^1.8.0"
gunicorn = "^20.1.0"
python-decouple = "^3.4"
ipython = "^8.0.0"
djangorestframework = "^3.13.1"
drf-spectacular = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.4.0"
pytest = "^5.2"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
pytest-sugar = "^0.9.4"
pytest-icdiff = "^0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
